# grpc_demo

grpc_c++/: CMakeLists.txt
grpc_c++/header/: test.grpc.pb.h  test.pb.h
grpc_c++/source/: test.grpc.pb.cc  test.pb.cc
grpc_go/: go.mod
grpc_go/pb/: test.pb.go  test.proto
grpc_go/src/client/: client.go
grpc_go/src/server/: server.go
